--- a/cv/cv.html
+++ b/cv/cv.html
@@ -44,7 +44,12 @@
             <h3 class="title">Education</h3>
             <ul>
                 <li>
-                    <h5>2019 - heden</h5><br>
+                    <h5>2022 - heden</h5><br>
+                    <h4>Creative media and Game technologies</h4>
+                    <h4>Hogeschool Rotterdam</h4>
+                </li>
+                <li>
+                    <h5>2019 - 2022</h5><br>
                     <h4>applicatie-media development</h4>
                     <h4>Techniek College Rotterdam</h4>
                 </li>
@@ -122,7 +127,7 @@
 
                             <div class="box">
                                 <div class="jaar_bedrijf">
-                                    <h5>2018 - heden</h5>
+                                    <h5>2018 - 2021</h5>
                                     <h5>Brunotti beachclub</h5>
                                     </div>
                                     <div class="text">
@@ -130,6 +135,17 @@
                                         <p> Medewerker restaurant, alle bovengenoemde werkzaamheden.</p>
                                     </div>
                                 </div>
+
+                                <div class="box">
+                                    <div class="jaar_bedrijf">
+                                        <h5>2022 - 2022</h5>
+                                        <h5>Jorr-IT solutions</h5>
+                                        </div>
+                                        <div class="text">
+                                            <h4>Software developer</h4>
+                                            <p> gewerkt als software developer Voor Jorr-it solutions</p>
+                                        </div>
+                                    </div>
 
         <div class="about skills">
             <h2 class="title2">skills</h2>
