--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="content">
                 <div class="textBox">
                     <p>Hallo,<br>
-                    Mijn naam is Olivier Schell, 19 jaar oud, woonachtig in Rockanje. Ik ben derdejaars student op het Techniek College Rotterdam, vestiging Spijkenisse.
+                    Mijn naam is Olivier Schell, 20 jaar oud, woonachtig in Rockanje. Ik ben eerstejaars student op Hogeschool Rotterdam, vestiging Wijnhaven, Rotterdam.
                     Ik werk al jaren bij Brunotti aan het Oostvoorns Meer, hier werk ik meestal als runner, maar indien nodig, ook als medewerker in de keuken. In teamverband werken doe ik graag, want ik vind het leuk om van anderen te leren. Maar zelfstandig werken is voor mij ook geen probleem.           
                     In mijn vrije tijd vind ik het leuk om te windsurfen, te reizen en te gamen.
                     </p>
