--- a/index.html
+++ b/index.html
@@ -124,32 +124,37 @@
                 </div>
                 </section>
 
-                <!--contact-->
-                <section class="contact adjust" id="contact">
-                    <div class="title">
-                        <h2>contact</h2>
-                        <p>dit is een voorbeeld van een contact formulier.</p>
-                    </div>
-                    <div class="contactForm">
-                        <div class="row">
-                            <input type="text" name="" placeholder="voornaam">
-                            <input type="text" name="" placeholder="achternaam">
-                        </div>
-                        <div class="row">
-                            <input type="text" name="" placeholder="Email adres">
-                            <input type="text" name="" placeholder="Mobiele telefoonnummer">
-                        </div>
-                        <div class="row2">
-                            <textarea placeholder="Bericht"></textarea>
-                        </div>
-                        <div class="row2">
-                            <input type="submit" value="Send">
-                        </div>
-                    </div>
-                </section>
+<!--contact-->
+<section class="contact adjust" id="contact">
+    <div class="title">
+        <h2>contact</h2>
+        <p>dit is een voorbeeld van een contact formulier.</p>
+    </div>
+    <div class="contactForm">
+        <div class="row">
+            <input type="text" name="" placeholder="voornaam">
+            <input type="text" name="" placeholder="achternaam">
+        </div>
+        <div class="row">
+            <input type="email" name="" placeholder="Email adres">
+            <input type="tel" name="" placeholder="Mobiele telefoonnummer">
+        </div>
 
-                </div>
-            </div>
-            <script src="portfolio_function.js"></script>
-    </body>
+        <div class="row2">
+            <textarea placeholder="Bericht"></textarea>
+        </div>
+        <div class="rowcheck">
+            <input type="checkbox" id="checkbox" name="perfect" value="perfect">
+            <label for="perfect">i accept to the Terms of service.</label>
+        </div>
+        <div class="row2">
+            <input type="submit" value="Send">                        
+        </div>                   
+    </div>
+</section>
+
+</div>
+</div>
+<script src="portfolio_function.js"></script>
+</body>
 </html>
