--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="content">
                     <div class="imgBx2">
-                        <img src="media/php-code.jpg">
+                        <img src="media/pidixy-events.jpg">
                     </div>
                 <div class="textBox">
                     <p>Wat is mijn intresse in dit vak?,<br>
