--- a/index.html
+++ b/index.html
@@ -72,14 +72,22 @@
                 </div>
                 <div class="content">
                     <div class="imgBx2">
-                        <img src="media/php-code.jpg">
+                        <h5> pidixy </h5>
+                        <img src="media/pidixy.jpg">
+                        <h5>Soundoff-Sports</h5>
+                        <img src="media/SoS.PNG">
                     </div>
                 <div class="textBox">
                     <p>Wat is mijn intresse in dit vak?,<br>
                     Ik heb het altijd heel leuk gevonden om met technologie te werken. Ook heb ik altijd interesse in de nieuwste technologie in de markt en hoe het gemaakt wordt.
                     Mijn grote motivatie in dit vak is om het volgende grote ding te maken dat ooit de wereld zal veranderen. Ik ben klaar om alles te doen om dit doel te bereiken.
                     Voor mijn eerst opdracht ben ik een reserveringssysteem aan het maken met create functions voor Pidixy. Ik vind dit soort opdrachten heel leuk want ik vind het leuk
-                    om iemand blij te maken met mijn technologie. en ik kan dan ook een goede verandering maken voor dit bedrijf.
+                    om iemand blij te maken met mijn technologie. en ik kan dan ook een goede verandering maken voor dit bedrijf. 
+                    <br><br><br>
+                    voor mijn tweede project heb ik samen met een team Soundoff-Sports gemaakt.
+                    dit is een applicatie dat mensen met een auditieve beperking helpt met sporten. ik heb dit doel bereikt om een systeem te maken dat tekst bubbles stuurt van één pagina naar de andere.
+                    op deze andere pagina wordt deze tekst dan groot gedisplayed zodat mensen met een auditieve beperking beter instructies kunnen volgen van de instructeur.
+                    ik vind dit soort opdrachten heel leuk want ik kan mensen dan echt helpen met een beperking en de wereld van sport makkelijker voor hun maken.
                     </p>
                 </div>
                 
