content update CLE

--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
                                         <p>Tijdens CLE3 heb ik gewerkt in groepsverband aan een web service.
                                              Voor de web service heeft iedereen eeen individuele pagina moeten maken. 
                                              Hierbij heb ik javascript toegepast voor mijn foto's en suggesties.
+                                             voor dit project heb ik een functie aangemaakt om voor mensen met een auditieve beperking het
+                                             makkelijker te maken om te sporten in groepsverband.
                                         </p>
                                         
                                     </div>
@@ -221,6 +223,8 @@
                                         </div>
                                         <div class="datefour">Jaar 1: P04</div>
                                         <p>Tijdens CLE4 heb ik in groepsverband gewerkt om een game te maken gebaseerd op een locatie in Rotterdam.
+                                            ik heb met mijn team een game gemaakt van het museumplein. ik kwam toen op het idee om een bordspel te maken
+                                            waarin de politie kunstwerken moeten beschermen en boeven moeten deze kunstwerken stelen
                                         </p>
                                         <!-- <a class="bnt-more" href="#" target="_blank">Speel de game</a> -->
                                     </div>
