added new text about my game

--- a/index.html
+++ b/index.html
@@ -84,10 +84,17 @@
                     Voor mijn eerst opdracht ben ik een reserveringssysteem aan het maken met create functions voor Pidixy. Ik vind dit soort opdrachten heel leuk want ik vind het leuk
                     om iemand blij te maken met mijn technologie. en ik kan dan ook een goede verandering maken voor dit bedrijf. 
                     <br><br><br>
-                    voor mijn tweede project heb ik samen met een team Soundoff-Sports gemaakt.
+                    Voor mijn tweede project heb ik samen met een team Soundoff-Sports gemaakt.
                     dit is een applicatie dat mensen met een auditieve beperking helpt met sporten. ik heb dit doel bereikt om een systeem te maken dat tekst bubbles stuurt van één pagina naar de andere.
                     op deze andere pagina wordt deze tekst dan groot gedisplayed zodat mensen met een auditieve beperking beter instructies kunnen volgen van de instructeur.
                     ik vind dit soort opdrachten heel leuk want ik kan mensen dan echt helpen met een beperking en de wereld van sport makkelijker voor hun maken.
+                    <br><br><br>
+                    Voor mijn derde en laatste project van jaar 1 heb ik een videogame gemaakt met een team van 4 genaamd museumroof.
+                    Dit is een game waar je speelt als politie of boef. Het doel van de politie is om kunstwerken te beschermen,
+                    En het doel van de boef is om zoveel mogelijk kunstwerken te stelen. Ik vond het werken aan deze game heel leuk om te doen
+                    want ik wil later graag in de game industrie werken. het is ook de reden waarom ik voor deze opleiding heb gekozen, om games te maken.
+                    het werken aan dit project vond ik het leukste van alle projecten. hopelijk maak ik later in de toekomst nog betere en leukere games.
+                    Ik wil later een grote game bouwen die heel veel mensen leuk gaan vinden. 
                     </p>
                 </div>
                 
