added museumroof gameplay image

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
                         <img src="media/pidixy.jpg">
                         <h5>Soundoff-Sports</h5>
                         <img src="media/SoS.PNG">
+                        <h5>museumroof</h5>
+                        <img src="media/museumroof-game.png">
                     </div>
                 <div class="textBox">
                     <p>Wat is mijn intresse in dit vak?,<br>
