--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                             ik heb met mijn team een game gemaakt van het museumplein. ik kwam toen op het idee om een bordspel te maken
                                             waarin de politie kunstwerken moeten beschermen en boeven moeten deze kunstwerken stelen
                                         </p>
-                                        <!-- <a class="bnt-more" href="#" target="_blank">Speel de game</a> -->
+                                        <a class="bnt-more" href="https://fredsjr.github.io/museum-roof/" target="_blank">Speel de game</a>
                                     </div>
                                 </div>
                             </div>
